feat: wallet adress pool initialization
